fix]-#23-광고자리-낙찰-목록-조회